import("../../test_template.gni")
import("test_src_functional.gni")

out_test_lib_dir = "${root_out_dir}/lib.unstripped/musl/libc-test-lib/"

if (is_standard_system && musl_iterate_and_stats_api) {
  functional_list += malloc_stats_list
}

foreach(s, functional_list) {
  test_unittest(s) {
    target_dir = "functional"
  }
}

group("functional_test") {
  testonly = true
  deps = [ ":dso_shared" ]

  foreach(s, functional_list) {
    deps += [ ":${s}" ]
  }
}

test_sharedlib("dl_multithread_test_dso") {
}
test_sharedlib("dlclose_recursive") {
  cpp_file = true
}
test_sharedlib("dlclose_recursive_dlopen_so") {
  cpp_file = true
}
test_sharedlib("dlclose_tls") {
  cpp_file = true
}
test_sharedlib("dlopen_ns_dso") {
}
test_sharedlib("dlopen_so_dep_dlopen_ns_dso") {
  deps = [ ":dlopen_ns_dso" ]
}
test_sharedlib("dlopen_for_load_by_global_dso") {
}
test_sharedlib("dlopen_for_load_by_local_dso") {
}
test_sharedlib("dlopen_dso") {
}
test_sharedlib("dlclose_reset_dso") {
}
test_sharedlib("tls_init_dso") {
}
test_sharedlib("tls_align_dso") {
}
test_sharedlib("atexit_dlclose_dso") {
}
test_sharedlib("dlopen_weak_deps") {
}
test_sharedlib("dlopen_weak") {
  deps = [ ":dlopen_weak_deps" ]
}
test_sharedlib("dlopen_global") {
  global = true
}
test_sharedlib("dlopen_local") {
}

test_sharedlib("dlopen_init") {
}

test_sharedlib("dlopen_register_a") {
}

test_sharedlib("dlopen_register_b") {
}

test_sharedlib("dlopen_register_c") {
}

test_sharedlib("foo") {
}

ohos_shared_library("dlopen_weaklink_a") {
  sources = [ "dlopen_weaklink_a.c" ]

  output_name = "dlopen_weaklink_a"

  output_extension = "so"

  cflags = [
    "-fPIC",
    "-DSHARED",
    "-Wall",
  ]

  deps = [ ":foo" ]

  test_dir = rebase_path("${out_test_lib_dir}")

  ldflags = [
    "-shared",
    "-nostdlib",
    "-L${test_dir}",
    "-Wl,--no-as-needed,-lfoo,--as-needed",
    "-Wl,-rpath=/data/local/tmp/libc-test-lib/,--ohos-weak-library=libfoo.so",
  ]

  subsystem_name = "musl"

  part_name = "libc-test-lib"
}

ohos_shared_library("dlopen_weaklink_b") {
  sources = [ "dlopen_weaklink_b.c" ]

  output_name = "dlopen_weaklink_b"

  output_extension = "so"

  cflags = [
    "-fPIC",
    "-DSHARED",
    "-Wall",
  ]

  deps = [ ":foo" ]

  ldflags = [
    "-shared",
    "-nostdlib",
    "-Wl,-rpath=/data/local/tmp/libc-test-lib/",
  ]

  subsystem_name = "musl"

  part_name = "libc-test-lib"
}

ohos_shared_library("dlopen_weaklink_c") {
  sources = [ "dlopen_weaklink_c.c" ]

  output_name = "dlopen_weaklink_c"

  output_extension = "so"

  cflags = [
    "-fPIC",
    "-DSHARED",
    "-Wall",
  ]

  deps = [ 
    ":dlopen_weaklink_a",
    ":dlopen_weaklink_b",
  ]

  ldflags = [
    "-shared",
    "-nostdlib",
    "-Wl,-rpath=/data/local/tmp/libc-test-lib/",
  ]

  subsystem_name = "musl"

  part_name = "libc-test-lib"
}

ohos_shared_library("dlopen_weaklink_d") {
  sources = [ "dlopen_weaklink_d.c" ]

  output_name = "dlopen_weaklink_d"

  output_extension = "so"

  cflags = [
    "-fPIC",
    "-DSHARED",
    "-Wall",
  ]

  deps = [ ":dlopen_weaklink_b" ]

  test_dir = rebase_path("${out_test_lib_dir}")

  ldflags = [
    "-shared",
    "-nostdlib",
    "-L${test_dir}",
    "-Wl,--no-as-needed,-ldlopen_weaklink_b,--as-needed",
    "-Wl,-rpath=/data/local/tmp/libc-test-lib/,--ohos-weak-library=libdlopen_weaklink_b.so",
  ]

  subsystem_name = "musl"

  part_name = "libc-test-lib"
}

group("dso_shared") {
  testonly = true

  deps = [
    ":atexit_dlclose_dso",
    ":dl_multithread_test_dso",
    ":dlclose_recursive",
    ":dlclose_recursive_dlopen_so",
    ":dlclose_reset_dso",
    ":dlclose_tls",
    ":dlopen_dso",
    ":dlopen_for_load_by_global_dso",
    ":dlopen_for_load_by_local_dso",
    ":dlopen_global",
    ":dlopen_init",
    ":dlopen_local",
    ":dlopen_ns_dso",
    ":dlopen_register_a",
    ":dlopen_register_b",
    ":dlopen_register_c",
    ":dlopen_so_dep_dlopen_ns_dso",
    ":dlopen_weak",
    ":dlopen_weak_deps",
    ":tls_align_dso",
    ":tls_init_dso",
    ":foo",
    ":dlopen_weaklink_a",
    ":dlopen_weaklink_b",
    ":dlopen_weaklink_c",
    ":dlopen_weaklink_d",
  ]
}
