# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

functionalext_list = [
  "locale:functionalext_locale_test",
  "time:functionalext_time_test",
  "reboot:functionalext_reboot_test",
  "tgkill:functionalext_tgkill_test",
  "thread:functionalext_thread_test",
  "trace:functionalext_trace_test",
  "dlns:dlns_test",
  "rpath:rpath_ns_test",
  "info:functionalext_info_test",
  "ldso_randomization:functionalext_ldso_randomization_test",
  "relro:functionalext_relro_test",
  "supplement:functionalext_supplement_test",
  "fortify:functionalext_fortify_test",
  "symver:functionalext_symver_test",
  "ldso_cfi:ldso_cfi_test",
  "sched:functionalext_sched_test",
  "unittest:functionalext_unittest_test",
  "legacy:functionalext_legacy_test",
  "sigchain:functionalext_sigchain_test",
  "queue:functionalext_queue_test",
  "crypt:functionalext_crypt_test",
  "backtrace:functionalext_backtrace_test",
  "ldso_debug:functionalext_ldso_debug_test",
  "ldso_dlopen_config_abs_path:ldso_dlopen_config_abs_path_test",
  "ldso_same_name_symbol:ldso_same_symbol_name_with_different_version",
  "dl_different_hash:dl_different_hash",
  "hilog:hilog_level",
  "ohos_dfx_log:ohos_dfx_log",
  "string:functionalext_string_test",
  "adlt:functionalext_adlt_test",
]
