# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
functionalext_adlt_test = [
    "asan:adlt_asan_test",
    "base:adlt_base_test",
    "bugfix:adlt_bugfix_test",
    "hwasan:adlt_hwasan_test",
    "cfi:adlt_cfi_test",
    "ld-musl:adlt_ld_musl_test",
    "tls:adlt_tls_test",
    "tsan:adlt_tsan_test",
    "ubsan:adlt_ubsan_test",
]