# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../../../test_template.gni")
import("./ldso_dlopen_config_abs_path_template.gni")

abs_path_test_case("ldso_dlopen_config_abs_path_1") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_2") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_3") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_4") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_5") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_6") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_7") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_8") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_9") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_10") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_11") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_12") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_13") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_14") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_15") {
}

abs_path_test_case("ldso_dlopen_config_abs_path_16") {
}

test_sharedlib("hello") {
}

group("ldso_dlopen_config_abs_path_test") {
  testonly = true
  deps = [
    ":hello",
    ":ldso_dlopen_config_abs_path_1",
    ":ldso_dlopen_config_abs_path_2",
    ":ldso_dlopen_config_abs_path_3",
    ":ldso_dlopen_config_abs_path_4",
    ":ldso_dlopen_config_abs_path_5",
    ":ldso_dlopen_config_abs_path_6",
    ":ldso_dlopen_config_abs_path_7",
    ":ldso_dlopen_config_abs_path_8",
    ":ldso_dlopen_config_abs_path_9",
    ":ldso_dlopen_config_abs_path_10",
    ":ldso_dlopen_config_abs_path_11",
    ":ldso_dlopen_config_abs_path_12",
    ":ldso_dlopen_config_abs_path_13",
    ":ldso_dlopen_config_abs_path_14",
    ":ldso_dlopen_config_abs_path_15",
    ":ldso_dlopen_config_abs_path_16",
  ]
}
